k8s/elk/elasticsearch-kibana/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-headless
  namespace: es
spec:
  clusterIP: None
  selector:
    app: elasticsearch
  ports:
  - name: http
    protocol: TCP
    port: 9200
    targetPort: 9200
  - name: transport
    protocol: TCP
    port: 9300
    targetPort: 9300
