k8s/elk/elasticsearch-kibana/kibana.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kibana
  labels:
    app: kibana
  namespace: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.15.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5601
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: kibana-storage
          mountPath: /usr/share/kibana/data
        - name: kibana-plugins
          mountPath: /usr/share/kibana/plugins
        - name: kibana-config
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
  volumeClaimTemplates:
  - metadata:
      name: kibana-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
      storageClassName: nfs-storageclass
  - metadata:
      name: kibana-plugins
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      storageClassName: nfs-storageclass
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
  namespace: es
spec:
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 35601
  selector:
    app: kibana
  type: NodePort
