k8s/elk/elasticsearch-kibana/kibana_svc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-pttech-ingress
  namespace: es
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kibana.pttech.cc
    secretName: kibana-pttech-tls
  rules:
  - host: kibana.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
